# coder.rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  gen-readme.sh
.github/workflows/: rust.yml
src/: builder.rs  client.rs  error.rs  headers.rs  lib.rs  macros.rs  util.rs
src/builders/: mod.rs
src/builders/envs/: get.rs
src/builders/image_tags/: get.rs
src/builders/images/: get.rs
src/builders/orgs/: get.rs
src/builders/registries/: get.rs
src/builders/services/: get.rs
src/builders/users/: get.rs
src/models/: duration.rs  envs.rs  images.rs  mod.rs  orgs.rs  services.rs  users.rs
src/orgs/: get.rs
src/users/: get.rs
