[package]
name = "coder"
authors = ["Colin Adler <colin@coder.com>"]
description = "Pure Rust bindings to the Coder Enterprise API"
version = "0.2.4"
license = "MIT"
homepage = "https://coder.com"
repository = "https://github.com/coadler/coder.rs"
documentation = "https://docs.rs/coder"
readme = "README.md"
edition = "2018"
exclude = ["src/bin/**"]

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[dependencies]
hyper = "0.13"
hyper-tls = { version = "0.4", optional = true }
hyper-rustls = { version = "0.21", optional = true }
native-tls = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
paste = "1.0"
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
